shake shake shake

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,124 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  box-sizing: border-box;
+  background-color: whitesmoke;
+}
+* {
+  box-sizing: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/**
+ * Countdown
+ *
+ * Inspired by Daily UI 014 - Countdown Timer by Caroline
+ * https://dribbble.com/shots/5755661-Daily-UI-014-Countdown-Timer
+ */
+.cd {
+  font-family: menlo;
+  width: 30rem;
+  margin: 8rem auto;
+  background-color: #0f1b37;
+  background: radial-gradient(#56368a, #21395c);
+  color: #fff;
+  padding: 5rem;
+  box-shadow: 0 2rem 2rem -0.5rem #00000070;
+  border-radius: 3px;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+.cd--is-finished {
+  animation: shake 700ms cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+.cd__display {
+  --size: 20rem;
+  width: var(--size);
+  height: var(--size);
+  margin: 0 auto 6rem;
+  border-radius: 50%;
+  border: 10px solid #ffffff20;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.cd__time {
+  margin-top: 2rem;
+  font-size: 50px;
+}
+
+.cd__duration {
+  margin-top: 1rem;
+}
+
+.cd__ms {
+  font-size: 24px;
+  opacity: 0.5;
+}
+
+.cd__actions {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "esq meio dir";
+  align-items: center;
+  text-align: center;
+}
+
+.cd__action {
+  --size: 5em;
+  outline: none;
+  appearance: none;
+  margin: 0 auto;
+  widows: auto;
+  border: none;
+  font: inherit;
+  border-radius: 50%;
+  width: var(--size);
+  height: var(--size);
+  background-color: #fff;
+  color: #21395c;
+  cursor: pointer;
+  transition: 250ms all;
+}
+
+.cd__action:hover,
+.cd__action:focus {
+  opacity: 1;
+  color: #e256db;
+}
+
+.cd__action--toggle {
+  font-size: 18px;
+  grid-area: meio;
+}
+
+.cd__action--stop {
+  font-size: 12px;
+  grid-area: dir;
+  opacity: 0.5;
 }
